Fixed issue #18301: Mass action drop-up menu looks like overflow hidden in question list

--- a/assets/packages/adminbasics/scss/000-lime-admin-common.scss
+++ b/assets/packages/adminbasics/scss/000-lime-admin-common.scss
@@ -4345,3 +4345,8 @@ html[dir="rtl"] th {
 .w-100 {
     width: 100% !important;
 }
+
+/** List Questions Grid **/
+#question-grid {
+    overflow-x: visible;
+}
